--- a/index.html
+++ b/index.html
@@ -6,9 +6,25 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body id="body" class="body">
-    <main class="wrap">
-        <h1 style="color: white">Hello world!!!</h1>
-    </main>
+<div class="form-wrap">
+    <div class="logo-wrap">
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+    </div>
+    <h1 class="form-title">QCRM</h1>
+    <span class="form-subtitle">by SupportYourApp</span>
+    <form class="form" action="" method="post">
+        <input class="input" type="text" name="login" id="login" placeholder="Login">
+        <input class="input" type="password" name="pswrd" id="pswrd" placeholder="Password">
+        <div class="checkbox-wrap">
+            <input class="checkbox" type="checkbox" name="checkbox" id="checkbox">
+            <label class="checkbox-lbl" for="checkbox">Remember me on this computer</label>
+        </div>
+        <input class="btn" type="submit" name="submit" id="submit" value="Sign in to QCRM">
+    </form>
+</div>
 <script src="script.js"></script>
 </body>
 </html>
